minor alignment fix

--- a/src/Components/Message/MessengerComponent.css
+++ b/src/Components/Message/MessengerComponent.css
@@ -8,7 +8,7 @@
 }
 
 .chatBoxMain {
-    height: 100vh;
+    height: 98vh;
     display: flex;
     flex-direction: column
 }
